fix(patient-registration): reduce sidebar gap from top

--- a/packages/esm-patient-registration-app/src/patient-registration/patient-registration.scss
+++ b/packages/esm-patient-registration-app/src/patient-registration/patient-registration.scss
@@ -60,8 +60,7 @@
 .stickyColumn {
   align-self: flex-start;
   position: sticky;
-  // layout.$spacing-09 for the nav height and layout.$spacing-05 for top margin
-  top: layout.$spacing-10;
+  top: layout.$spacing-05;
 }
 
 .touchTarget a:active {
